[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "leetpicker"
version = "1.0.0"
description = "定時挑選 LeetCode 題目的 CLI 工具"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
leet = "leet:main"

[tool.setuptools]
py-modules = ["leet"]
